# cwl2ogc

./: .coverage  .gitignore  404.html  NOTICE  README.md  Taskfile.yaml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  package.yaml  playground.yaml  release.yaml
api/latest/cwl2ogc/: index.html
api/latest/cwl2ogc/cli/: index.html
api/latest/cwl2ogc/stac_collection/: index.html
api/latest/cwl2ogc/stac_item/: index.html
array-inputs/: index.html
cli/: index.html
complex-cwl-types/: index.html
docs/: array-inputs.ipynb  complex-cwl-types.ipynb  essential-input-parameters.ipynb  exclusive-input-parameters-expressions.ipynb  graph.ipynb  imported-cwl-types.ipynb  inclusive-exclusive-inputs.ipynb  index.md  schema.ipynb  string-formats.ipynb
essential-input-parameters/: index.html
exclusive-input-parameters-expressions/: index.html
graph/: index.html
imported-cwl-types/: index.html
inclusive-exclusive-inputs/: index.html
playground/: Dockerfile  playground.py
schema/: index.html
search/: search_index.json
src/cwl2ogc/: __about__.py  __init__.py  cli.py  stac_collection.py  stac_item.py
string-formats/: index.html
tests/: test_conversion.py
tests/artifacts/: app-water-body.1.1.0.cwl
